fix(detectors): close the design-level soundness gaps from PR #222's not-fixed list
Four gaps reported in the PR body, plus the demo GIF, in criticality
order:

1. Happens-before model (the harness-derived part). The runner ends a
   round by awaiting the worker latch and starts the next by submitting
   fresh tasks, so rounds are totally ordered through the runner thread
   - yet RaceConditionDetector and AtomicityValidator paired accesses
   across rounds and reported them as races. Under virtual threads
   (the default) every round brings fresh thread ids, making cross-round
   false positives the common case. Both detectors now stamp each
   record with an invocation epoch that ConcurrencyRunner bumps per
   round (flushing telemetry first so agent-captured accesses land in
   the round that produced them), and analysis only pairs same-epoch
   accesses. Same-round pairs still flag: user-level locks remain
   invisible, which is the remaining, honest gap.

2. VisibilityMonitor semantics inverted twice. The old rule flagged any
   value change across rounds (ordinary counters and per-round fixture
   state: a false-positive machine) and could not flag two threads
   seeing different values within one round (the actual stale-read
   signature, which never spans two invocation ids). Snapshots now
   carry the observing thread, and a field is reported only when two
   threads observed two distinct values within a single round.

3. RaceConditionDetector object identity. Bare identityHashCode keys
   merged distinct objects on hash collision (about 50% odds near ~54k
   live recorded objects). Keys are now referent-identity (==) with the
   hash cached, so a collision costs a bucket neighbor, never a merge.

4. Stuck-worker quiesce. The 2s grace is now tunable via
   -Dasync-test.quiesce.grace.ms; workers are named async-test-worker-N
   (platform and virtual), and an incomplete quiesce WARN-logs each
   surviving worker's stack (runner.quiesce.stuck-worker) so the us